# GABARRA

./: LICENSE  gabarra_documentation.ipynb  pyproject.toml  readme.md  requirements.txt  setup.py
src/gabarra/data_analysis/: data_analysis.py
src/gabarra/data_processing/: data_processing.py
src/gabarra/data_visualization/: data_visualization.py
src/gabarra/machine_learning/: machine_learning.py
tests/: test_DP.py  test_ML_linear_regression.py  teste_ML_linear_regression.py
tests/data_analysis/: data_analysis.py
tests/data_processing/: data_processing copy.py  data_processing.py
tests/data_visualization/: data_visualization.py
tests/gabarra/machine_learning/: machine_learning.py
tests/machine_learning/: machine_learning.py
